--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
           <p>Copyright@Tract2021</p>
         </div>
       </div>
+
+      <div class="credentialsContainer">
+        <h3>Inspired By</h3>
+        <a href="https://dribbble.com/shots/15785941-Login-UI">DStudio</a>
+      </div>
     </div>
   </body>
 </html>
